Try to fix Java 11 build