@@ -177,7 +177,7 @@ macAppBundle {
 if (project.hasProperty('headless') ? project.headless : false) {
     println "Running UI Tests Headless"
     test {
-        jvmArgs = ['-Djava.awt.headless=true', '-Dtestfx.robot=glass', '-Dtestfx.headless=true', '-Dprism.order=sw', '-Dprism.text=t2k']
+        jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED', '-Djava.awt.headless=true', '-Dtestfx.robot=glass', '-Dtestfx.headless=true', '-Dprism.order=sw', '-Dprism.text=t2k']
     }
 }
 test {
